--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,7 @@ h2{
 }
 
 .button{
+    cursor: pointer;
     max-width: 143px;
     padding: 10px 18px;
     background: #575445;
@@ -55,9 +56,9 @@ h2{
     line-height: 22px;  
 }
 
-button:not(:last-of-type){
+.cont button:not(:last-of-type){
     margin-right: 20px;
-}
+} 
 
 .button__cart{
     display: flex;
@@ -66,6 +67,7 @@ button:not(:last-of-type){
 }
 
 .button__arrow{
+    cursor: pointer;
     border: none;
     background-color: transparent;
     padding: 0;
@@ -86,6 +88,7 @@ button:not(:last-of-type){
 }
 
 .button__white{
+    cursor: pointer;
     font-size: 15px;
     line-height: 22px;
     text-align: center;
@@ -160,7 +163,7 @@ button:not(:last-of-type){
     position: relative;
     max-width: 1168px; 
     margin: 0 auto;
-    padding: 100px 136px;
+    padding: 100px 0;
     display: flex;
     align-items: center;
 }
@@ -191,6 +194,7 @@ button:not(:last-of-type){
 .aboutUs-captions{
     max-width: 400px;
     margin: 0 auto;
+    padding: 20px;
 }
 
 .aboutUs-captions h2{
@@ -210,7 +214,7 @@ button:not(:last-of-type){
 .products{
     position: relative;
     background-color: #fafbfc;    
-    padding: 100px 120px;
+    padding: 100px 0;
 }
 
 .products__captions{
@@ -292,6 +296,7 @@ button:not(:last-of-type){
 .grid2_item img{
     border-radius: 10px;
     z-index: -1;
+    max-width: 100%;
     
 }
 
@@ -301,11 +306,11 @@ button:not(:last-of-type){
 
 .grid2_item img:hover {
     filter: blur(0.5rem) opacity(50%);
-    /* transform: scale(1.1); */
     transition: 700ms;
 }
 
 .grid-button{
+    cursor: pointer;
     max-width: 177px;
     margin: 20px auto 100px;
 
@@ -424,14 +429,21 @@ button:not(:last-of-type){
 }
 
 .grid3{
-    display: grid;
-    gap: 32px;
+    display: flex;
     grid-template-columns: repeat(2, 568px);
     grid-template-rows: repeat(1, 423px);
     justify-content: center;
     text-align: center;    
     margin: 0 auto;
     /* padding: 20px 0; */
+}
+
+.grid3_item:not(:last-child){
+    margin-right: 32px;
+}
+
+.grid3_item{
+    max-width: 568px;
 }
 
 .grid3_text h4{
@@ -481,6 +493,19 @@ button:not(:last-of-type){
     color: #6F7278;
 }
 
+.grid3-buttons{
+    display: flex;
+justify-content: center;
+}
+
+.grid3-button1{
+    margin: 30px 15px 0 0;
+}
+
+.grid3-button2{
+    margin: 30px 0 0 15px;
+}
+
 .footer-color{
     background-color: #575445;
     padding: 100px 0;
@@ -524,6 +549,10 @@ button:not(:last-of-type){
     margin: 0 auto;
 }
 
+.footer__nav-text h4, .footer__socials img{
+    cursor: pointer;
+}
+
 .footer__list{
     margin-bottom: 31px;
 }
@@ -565,4 +594,386 @@ button:not(:last-of-type){
 .footer__form-text{
     max-width: 438px;
     margin-bottom: 9px;
+}
+
+.button-text {
+    cursor: pointer;
+    background-image: linear-gradient( transparent 0%, transparent 90%, #E6B939 90%, #E6B939 100%
+);
+    background-repeat: no-repeat; background-size: 0% 100%; background-position-x: right;
+    transition: background-size 300ms;
+}
+
+    .button-text:hover {
+    background-size: 100% 100%; background-position-x: left;
+}
+
+.button, .footer__form-button{ 
+    background-color: #575445;
+    background-image: linear-gradient(
+    -60deg,
+    transparent, transparent 40%,
+    #ffffff44 40%, #ffffff44 60%,
+    transparent 60%, transparent 100%
+);
+    background-size: 200% 100%;
+    background-repeat: no-repeat;
+    background-position-x: 150%;
+}
+    
+.button:hover, .footer__form-button:hover, .button__white:hover {
+    background-position-x: -150%;
+    transition: background-position-x 800ms;
+}
+
+.button__white{
+    background-image: linear-gradient(
+    -60deg,
+    transparent, transparent 40%,
+    #00000044 40%, #00000044 60%,
+    transparent 60%, transparent 100%
+);
+    background-size: 200% 100%;
+    background-repeat: no-repeat;
+    background-position-x: 150%;
+} 
+
+.cursor{
+    cursor: pointer;
+}
+
+.bx-wrapper{
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+
+/* CHECK */
+
+.check{
+    width: 30px;
+    height: 3px;
+    background-color: #575445;
+}
+
+.check:not(:last-of-type){
+    margin-bottom: 4px;
+}
+
+.checkbox, .check-wrapper{
+    display: none;
+}
+
+/* MODAL */
+
+.modal-overlay{
+    display: none;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+}
+
+.modal{
+    position: absolute;
+    max-width: 550px;
+    text-align-last: center;
+    background-color: #fff;
+    padding: 50px 30px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.close{
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    cursor: pointer;
+}
+
+/* UPBUTTON */
+
+#up{
+    display: none;
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 50px;
+    right: 50px;
+    font-size: 22px;
+    font-weight: bold; 
+    color: white;
+    background-color:rgba(230, 185, 57, 0.4);  
+    backdrop-filter: blur(5px);
+    border-radius: 50%;
+    text-align: center; 
+    /* display: flex; 
+     justify-content: center;
+    align-items: center; */   
+    cursor: pointer;
+}
+
+#up span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-90deg);
+    display: inline-block;
+}
+
+#up:hover{
+    transform: scale(1.1);
+    transition: 700ms;
+}
+
+@media screen and (max-width: 1090px){    
+
+    .container{
+        max-width: 1040px;
+    }
+
+    .aboutUs-container, .footer__list, .footer__tou{
+        flex-direction: column;
+    }
+    
+    .header__list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header__list span:not(:last-of-type) {
+        margin: 0;
+    }
+
+    .header__list span:last-of-type{
+        margin: 0 0 10px 0;
+    }
+
+    .header__list span{
+        font-size: 16px;
+    }
+
+    .header__list span:not(:last-of-type){
+        margin-bottom: 10px;
+    }
+
+    .checkbox, .check-wrapper{
+        display: block;
+        width: 40px;
+        height: 40px;
+    }
+    .menu-all{
+        display: none;
+    }
+
+    .menu{
+        position: relative;
+        margin-top: 20px;
+    }
+
+    .check{
+        transition: 700ms;
+    }
+
+    .checkbox{
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        margin: 0;
+        top: 0;
+        right: 10px;
+        opacity: 0;
+        z-index: 5;
+    }
+
+    .check-wrapper{
+        position: relative;
+        z-index: 4;
+    }
+
+    .checkbox:checked ~ .check-wrapper > .check:first-of-type{
+        transform: rotate(45deg) translate(-50%, -50%);
+        top: 21px;
+        left: 8px;
+        position: absolute;
+    }
+
+
+    .checkbox:checked ~ .check-wrapper > .check:last-of-type{
+        transform: rotate(-45deg) translate(-50%, -50%);
+        top: 0;
+        right: 0;
+        position: absolute;
+    }
+
+    .checkbox:checked ~ .check-wrapper > .check:nth-of-type(2){
+        opacity: 0;
+    }
+
+    .checkbox:checked ~ .menu-all{
+        display: block;
+        position: absolute;
+        background-color: #E6B939;
+        margin-top: 10px;
+        top: -40%;
+        right: 20%;
+        text-align: center;
+        padding: 30px 40px;
+        z-index: 3;
+        border-radius: 5px;
+        flex-direction: column;
+        justify-content: center;
+        transition: 300ms;
+    }
+
+    .menu-all .button{
+        max-width: 143px;
+    }
+
+    .flex_menu{
+        flex-direction: column;
+    }
+
+    .cont button:not(:last-of-type){
+        margin-right: 0px;
+        margin-bottom: 10px;
+    }
+
+    .sea-button button:not(:last-of-type){
+        margin-right: 10px;
+    }
+
+    .grid{
+        grid-template-columns: repeat(2, 350px);
+        grid-template-rows: repeat(6, 250px);
+    }
+
+    .grid2{
+        grid-template-columns: repeat(2, 379px); 
+    }
+
+    .buyersGuides-captions{
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .buyersGuides-captions h4{
+        margin: 10px auto 30px;
+        padding: 0;
+    }
+
+    .bx-viewport{
+        max-width: 570px;
+        margin: 0 auto;
+    }
+
+    .footer__list, .footer__tou{
+        align-items: center;
+        padding: 20px;
+        margin-bottom: 0;
+    }
+
+    .footer__nav, .footer__rights{
+        margin-bottom: 30px;
+    }
+
+}
+
+@media screen and (max-width: 800px){
+    .container{
+        max-width: 750px;
+    }
+
+    .footer__list, .footer__tou{
+        align-items: flex-start;
+    }
+
+    .grid{
+        grid-template-columns: repeat(1, 350px);
+    }
+
+    .grid2{
+        grid-template-columns: repeat(1, 379px);
+    }
+
+    .footer__nav{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .footer__nav-text:not(:last-child){
+        margin-right: 0px;
+    }
+
+    .footer__nav-text:nth-child(1){
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 550px){
+
+    .container{
+        max-width: 430px;
+    }
+
+    .footer__form-input{
+        max-width: 300px;
+        padding: 17px 370px 17px 21px;
+    }
+
+    .captions{
+        left: 60px;
+    }
+}
+
+@media screen and (max-width: 480px){
+    .container{
+        max-width: 310px;
+    }
+
+    .footer__form-input{
+        max-width: 200px;
+        padding: 17px 270px 17px 21px;
+    }
+
+    .captions{
+        left: 40px;
+    }
+}
+
+@media screen and (max-width: 360px){
+    .container{
+        max-width: 300px;
+    }
+
+    .footer__form-input{
+        max-width: 200px;
+        padding: 17px 250px 17px 21px;
+    }
+
+    .grid_item h5{
+        max-width: 250px;
+        margin: 0 auto;
+    }
+}
+@media screen and (max-width: 320px){
+   .container{
+        max-width: 290px;
+   }
+
+   .footer__form-input{
+    max-width: 200px;
+    padding: 17px 230px 17px 21px;
+    }
+    .captions{
+        left: 30px;
+    }
 }
