--- a/style/style.css
+++ b/style/style.css
@@ -366,7 +366,7 @@ h2{
     color: #FFFFFF;
     display: flex;
     align-items: flex-start;
-    padding: 0;
+    padding: 10px;
 
 }
 
@@ -833,7 +833,7 @@ justify-content: center;
         border-radius: 5px;
         flex-direction: column;
         justify-content: center;
-        transition: 300ms;
+        transition: 800ms;
     }
 
     .menu-all .button{
@@ -944,6 +944,10 @@ justify-content: center;
         margin-bottom: 10px;
         margin-right: 0;
     }
+
+    .grid3_user-text1 {
+        margin-right: 320px
+    }
 }
 
 @media screen and (max-width: 480px){
@@ -959,11 +963,19 @@ justify-content: center;
     .captions{
         left: 40px;
     }
+
+    .grid3_user-text1 {
+        margin-right: 250px
+    }
 }
 
 @media screen and (max-width: 360px){
     .container{
         max-width: 300px;
+    }
+
+    .grid3_user-text1 {
+        margin-right: 180px
     }
 
     .footer__form-input{
@@ -979,6 +991,10 @@ justify-content: center;
 @media screen and (max-width: 320px){
    .container{
         max-width: 290px;
+   }
+
+   .grid3_user-text2 {
+    display: none;
    }
 
    .footer__form-input{
